# adventofcode-2025

./: README.md
haskell/: aoc2025.cabal  cabal.project
haskell/harness/AOC/: Harness.hs  InteractiveHelpers.hs
haskell/solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs
haskell/src/: Main.hs
haskell/util/: Grid2D.hs  ParsingPrelude.hs  Util.hs
